========================
0.0.8
========================

- added `opt.retry()` method in to the `API` evaluation
- improved HTTP cache in debug mode

========================
0.0.7
========================

- improved user-agent parser (added support for new headers `Sec-CH-UA`)
- improved `Number.pluralize()` method
- reduced DNS cache flush time to 3 minutes
- added `$.address` property with the absolute URL address
- added `$.ctrl(ctrl_instance)` method
- extended `Mail.from(email, [name])` method by adding `name` argument by [Marek Mráz](https://github.com/Mrazbb)
- added `CONF.mail_from_name {String}` option
- improved `$.query` parser
- improved `Total.run()` method
- added a new method `NEWCOMPONENT(html_or_URL_or_name, [callback])`
	- it compiles a FlowStream component to a method
- extended FlowStream by adding support for `input` and `output` Total.js inline schemas
- fixed memory usage in the Flow in non-worker mode
- improved Flow error handling
- improved HTML parser
- improved `controller.view()` supports calling without arguments
- extended ViewEngine by adding `view.renderlayout(name, content)` method

========================
0.0.6
========================

- unified debug and release mode
	- they use monitoring files
	- monitoring can be disabled via `options.watcher = false` in the start script
- improved watcher interval for a long-term process
- extended `edit` mode:
	- added `restart` command
- fixed partial validation
- fixed permissions error handling in actions
- added `Image` global variable
- added `Utils.filestreamer(filename, onbuffer(buffer, next), onend, [buffer_size])`
- fix image bug in the `Image.measureWEBP()` method by [Marek Mraz](https://github.com/Mrazbb)
- added `action.status(fn)` for handling and `$.status(value)` for calling in actions
- added HTTP auto-redirect for `WebSocketClient`
- added support for WebSocket redirections in the remote edit
- fixed `CACHE.read()`